--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ Professional Summary Link to heading Experienced Software Engineer with 4 years 
   <div class="about">
     
   
-    <div class="avatar"><img src="/images/avatar.jpg" alt="avatar"></div>
+    <div class="avatar"><img src="https://williamomeara.github.io/images/avatar.jpg" alt="avatar"></div>
   
 
 
@@ -181,7 +181,7 @@ Professional Summary Link to heading Experienced Software Engineer with 4 years 
 
     <h1>William O&#39;Meara</h1>
 
-<h2>Senior Software Engineer</h2>
+<h2>Software Engineer</h2>
 
 
 
