Use absolute URLs for images and PDF

--- a/projects/index.html
+++ b/projects/index.html
@@ -186,7 +186,7 @@ Download FYP PDF">
   </a>
 </h2>
 <p>Explored a supervised learning framework to address the NP-hard problem of maximum clique enumeration, which arises in network analysis tasks across domains like data mining, decision-making, and routing. Developed an edge-based approach with advanced feature engineering to predict edges not part of any maximum clique, enabling graph pruning for more efficient exact optimization algorithms. Implemented using Python and machine learning techniques, demonstrating superior results compared to existing node-based methods and handling larger problem instances.<br>
-<em><a href="/files/maximum-clique-fyp.pdf" >Download FYP PDF</a></em></p>
+<em><a href="https://williamomeara.github.io/williams_website/files/maximum-clique-fyp.pdf"  class="external-link" target="_blank" rel="noopener">Download FYP PDF</a></em></p>
 <h2 id="herd-manager-website-using-django">
   Herd Manager Website using Django
   <a class="heading-link" href="#herd-manager-website-using-django">
