Set absolute avatarURL

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ Professional Summary Link to heading Experienced Software Engineer with 4 years 
   <div class="about">
     
   
-    <div class="avatar"><img src="https://williamomeara.github.io/images/avatar.jpg" alt="avatar"></div>
+    <div class="avatar"><img src="https://williamomeara.github.io/williams_website/images/avatar.jpg" alt="avatar"></div>
   
 
 
