Remove personal details (address and phone)

--- a/index.html
+++ b/index.html
@@ -19,8 +19,6 @@
   
 
 
-Farranamoreen, Glasson, Athlone
-&#43;353 85 753 0420
 william.omeara123@gmail.com
 LinkedIn
 
@@ -37,18 +35,14 @@ Experienced Software Engineer with 4 years of progressive expertise in full-stac
 
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Home">
-  <meta name="twitter:description" content="William O’Meara Link to heading Farranamoreen, Glasson, Athlone
-&#43;353 85 753 0420
-william.omeara123@gmail.com
+  <meta name="twitter:description" content="William O’Meara Link to heading william.omeara123@gmail.com
 LinkedIn
 Professional Summary Link to heading Experienced Software Engineer with 4 years of progressive expertise in full-stack and backend development, cloud-native architectures, and microservices. Skilled in Python, Golang, Kubernetes, Helm, and Django, with a strong track record of delivering scalable software solutions in the betting, mining, and telecommunications industries. After spending three years working abroad and a year traveling, I am excited to settle closer to home and commit fully to furthering my career.">
 
 <meta property="og:url" content="https://williamomeara.github.io/williams_website/">
   <meta property="og:site_name" content="William O&#39;Meara CV">
   <meta property="og:title" content="Home">
-  <meta property="og:description" content="William O’Meara Link to heading Farranamoreen, Glasson, Athlone
-&#43;353 85 753 0420
-william.omeara123@gmail.com
+  <meta property="og:description" content="William O’Meara Link to heading william.omeara123@gmail.com
 LinkedIn
 Professional Summary Link to heading Experienced Software Engineer with 4 years of progressive expertise in full-stack and backend development, cloud-native architectures, and microservices. Skilled in Python, Golang, Kubernetes, Helm, and Django, with a strong track record of delivering scalable software solutions in the betting, mining, and telecommunications industries. After spending three years working abroad and a year traveling, I am excited to settle closer to home and commit fully to furthering my career.">
   <meta property="og:locale" content="en_us">
